test/simple/ill-typed/id_fun.caprice
(* TEST
  include refute;
*)


let f : int -> bool = fun x -> x
